syntax = "proto3";

option go_package = "messaging/";


message CreateRequest {
    string queue = 1;
    string message = 2;
}

message CreateResponse {
    string message = 1;
}

service Messaging {
    rpc SendMessageToQueue (CreateRequest) returns (CreateResponse) {}
    rpc ReadMessagesFromQueue (CreateRequest) returns (stream CreateResponse) {}
}